syntax = "proto3";

option csharp_namespace = "Shared.GrpcContracts";

import "google/protobuf/empty.proto";

service PlayerMainStatsService {
    rpc GetAsync(google.protobuf.Empty) returns (stream PlayerMainStatsDto);
}

message PlayerMainStatsDto {
    uint32 Health = 1;
    uint32 Hunger = 2;
    double Money = 3;
    uint32 Mood = 4;
}